# Cloud

./: .gitignore  README.md
.github/workflows/: deploy.yaml
lab1/: Dockerfile  docker-compose.yaml  export_secrets.sh  main.py  requirements.txt
lab1/static/: openapi.json
lab1/store/controller/: enrollment_controller.py  review.py  statistic.py  table_controller.py  user_controller.py
lab1/store/dao/: enrollment_dao.py  review.py  statistic.py  table_dao.py  user_dao.py
lab1/store/db/: connection.py
lab1/store/decorators/: auth.py
lab1/store/dto/: enrollment_dto.py  review.py  user_dto.py
lab1/store/route/: __init__.py
lab1/store/service/: auth.py  enrollment_service.py  statistic.py  table.py  user_service.py
lab1/tests/: load_test.py
lab3/: README.md  main.py  pyproject.toml  settings.py
lab3/cloud_functions/api_handler/: main.py  requirements.txt
lab3/cloud_functions/humidity_processor/: main.py
lab3/cloud_functions/light_processor/: main.py
lab3/cloud_functions/temperature_processor/: main.py  requirements.txt
lab3/src/api/: routes.py
lab3/src/api/emulator/: shema.py  views.py
lab3/src/db/: conn.py
lab3/src/db/models/: emulator.py
lab3/src/services/: database.py  emulator.py  gcp_pubsub.py
